update setup.cfg using setup-cfg-fmt

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,16 @@
 [metadata]
-name = digit-recognizer
+name = digit_recognizer
 version = 1.0.0
 description = Build a simple digit classifier using PyTorch
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/harbenml/digit-recognizer
 author = harbenml
 author_email = harbenml@protonmail.com
-url = https://github.com/harbenml/digit-recognizer
+license = MIT
+license_file = LICENSE
+classifiers =
+    License :: OSI Approved :: MIT License
 
 [options]
 packages = find:
