--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,11 @@ classifiers =
 
 [options]
 packages = find:
+python_requires = >=3.6
+package_dir =
+    =src
 
 [options.packages.find]
-exclude = tests
+where = src
+exclude =
+    tests
