--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,9 @@ classifiers =
 packages = find:
 python_requires = >=3.6
 package_dir =
-    =src
+    =digit_recognizer
 
 [options.packages.find]
-where = src
+where = digit_recognizer
 exclude =
     tests
