change version number

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = digit_recognizer
-version = 1.0.0
+version = 0.0.1
 description = Build a simple digit classifier using PyTorch
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -16,9 +16,9 @@ classifiers =
 packages = find:
 python_requires = >=3.6
 package_dir =
-    =digit_recognizer
+    =src
 
 [options.packages.find]
-where = digit_recognizer
+where = src
 exclude =
     tests
